--- a/R_Tutorial.html
+++ b/R_Tutorial.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Home Credit Default Risk Analysis</title>
+<title>Rule-Based Data Binning for Credit Risk Modeling in R</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -119,7 +119,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Home Credit Default Risk Analysis</h1>
+<h1 class="title">Rule-Based Data Binning for Credit Risk Modeling in R</h1>
 </div>
 
 
